--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -1,4 +1,4 @@
-<link rel='stylesheet' href='/content/nav.css' />
+<link rel='stylesheet' href='/content/app.css' />
 <nav>
   <img src="/assets/images/banner.jpeg" class="logo">
   <ul id="sidemenu">
