--- a/server/views/sections/contact.ejs
+++ b/server/views/sections/contact.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header.ejs %>
 <% include ../partials/main_nav.ejs %>
-<link rel='stylesheet' href='/Content/contact.css' />
+<link rel='stylesheet' href='/content/contact.css' />
 
 <section class="contact" id="contact">
      <div class="container">
